data/diff_tests/wasmtime/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1961.wast.bin.wast
(assert_invalid
  (module binary
    "\00\61\73\6d\01\00\00\00\01\88\80\80\80\00\02\60"
    "\01\7f\00\60\00\00\02\99\80\80\80\00\01\07\4d\6f"
    "\64\75\6c\65\42\0d\69\6d\70\6f\72\74\65\64\5f\66"
    "\75\6e\63\00\00\03\82\80\80\80\00\01\01\07\90\80"
    "\80\80\00\01\0c\4d\6f\64\75\6c\65\41\5f\66\75\6e"
    "\63\00\01\0a\8c\80\80\80\00\01\86\80\80\80\00\00"
    "\41\05\10\00\0b"
  )
""
)